Everything is completed

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>javafx-graphics</artifactId>
             <version>${javafx.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-web</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
 
         <!-- MaterialFX -->
         <dependency>
@@ -104,5 +109,4 @@
             </plugin>
         </plugins>
     </build>
-    <!-- Triggering Maven reload -->
 </project>
